brat/test/golden/kernel/copy.brat.golden
Error in test/golden/kernel/copy.brat@2:8-21
copy = { q => q, q }
       ^^^^^^^^^^^^^

  Type error: q has already been used

